--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,29 +6,66 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./css/signup.css">
     <title>Sign Up</title>
+    <style>
+        .password-wrapper {
+    position: relative;
+}
+
+.password-wrapper input[type="password"] {
+    width: calc(100% - 40px); /* Adjust input width to accommodate icon */
+    padding-right: 40px;
+}
+
+.toggle-password {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="form-container sign-up">
+            <!-- <a href="/home" class="logo">
+                <img src="./images/hub.png" alt="Homehub logo">
+            </a> -->
             <form action="/signup" method="post" enctype="multipart/form-data">
                 <h1>Create Account</h1>
-                <!-- <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
-                <span>or use your email for registration</span> -->
                 <input type="text" name="fullname" placeholder="Full Name" required>
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="text" name="phone" placeholder="Phone Number" required>
-                <input type="password" name="password" placeholder="Password" required>
+                <div class="password-wrapper">
+                    <input type="password" name="password" id="password" placeholder="Password" required>
+                    <i class="toggle-password fas fa-eye-slash"></i>
+                </div>
                 <input type="file" name="photo" accept="image/*">
                 <button type="submit">Sign Up</button>
                 <p>Already have an account? <a href="/">Login</a></p>
             </form>
         </div>
     </div>
+
+    <script>
+        const togglePassword = document.querySelector('.toggle-password');
+        const password = document.querySelector('#password');
+
+        togglePassword.addEventListener('click', function (e) {
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
+            this.classList.toggle('fa-eye');
+            this.classList.toggle('fa-eye-slash');
+
+            // Adjust input width when password is hidden
+            if (type === 'password') {
+                password.style.width = 'calc(100% - 40px)';
+            } else {
+                password.style.width = '100%';
+            }
+        });
+    </script>
 </body>
 </html>
