--- a/public/css/login.css
+++ b/public/css/login.css
@@ -108,6 +108,17 @@ p a:hover {
     text-decoration: underline;
 }
 
+.logo {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.logo img {
+    width: 200px; /* Set the desired width for the logo */
+    height: auto;
+}
+
+
 @media only screen and (max-width: 600px) {
     .container {
         padding: 20px;
