--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -81,6 +81,16 @@ button:hover {
     background: #512da8;;
 }
 
+.logo {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.logo img {
+    width: 200px; /* Set the desired width for the logo */
+    height: auto;
+}
+
 @media only screen and (max-width: 600px) {
     .container {
         padding: 20px;
