--- a/public/css/login.css
+++ b/public/css/login.css
@@ -24,6 +24,7 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 20px;
+    color: #333;
 }
 
 .social-icons {
@@ -67,7 +68,7 @@ a {
     display: block;
     text-align: right;
     margin: 10px 0;
-    color: #333;
+    color: #512da8;
     text-decoration: none;
     font-size: 14px;
 }
@@ -79,7 +80,7 @@ a:hover {
 button {
     width: 100%;
     padding: 10px;
-    background: #333;
+    background: linear-gradient(to right, #5c6bc0, #512da8);
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -89,23 +90,23 @@ button {
 }
 
 button:hover {
-    background: #555;
+    background: #512da8;
 }
 
 p {
     text-align: center;
     margin: 20px 0 0;
-    color: #666;
+    color: #512da8;
 }
 
 p a {
-    color: #333;
+    color: #512da8;
     text-decoration: none;
     font-weight: bold;
 }
 
 p a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .logo {
