--- a/views/include/_edit-user.ejs
+++ b/views/include/_edit-user.ejs
@@ -172,6 +172,7 @@
           <label for="status" class="formbold-form-label"> Status: </label>
           <div>
             <select id="status" class="formbold-form-input" name="status">
+            <option value="" disabled selected hidden>Select Status</option>
               <option value="active">Active</option>
               <option value="inactive">Inactive</option>
           </select>
@@ -182,6 +183,7 @@
           <label for="role" class="formbold-form-label"> Role: </label>
           <div>
             <select id="role" class="formbold-form-input" name="role">
+            <option value="" disabled selected hidden>Select Role</option>
               <option value="user">User</option>
               <option value="admin">Admin</option>
           </select>
@@ -194,6 +196,7 @@
         <div>
           <label for="avaliablity" class="formbold-form-label"> Sudo </label>
           <select id="availabilty" class="formbold-form-input" name="sudo">
+            <option value="" disabled selected hidden>Select Sudo</option>
             <option value="false">False</option>
             <option value="true">True</option>
         </select>
