--- a/views/include/_footer-guest.ejs
+++ b/views/include/_footer-guest.ejs
@@ -148,7 +148,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Login</a>
+              <a href="/login" class="footer-link">Login</a>
             </li>
 
             <li>
