--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -14,7 +14,9 @@
           </a>
 
           <p class="section-text">
-            Lorem Ipsum is simply dummy text of the and typesetting industry. Lorem Ipsum is dummy text of the printing.
+            Our mission is to simplify the real estate experience by 
+            providing a comprehensive, user-friendly platform that 
+            caters to all your property needs.
           </p>
 
           <ul class="contact-list">
@@ -152,7 +154,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">My account</a>
+              <a href="/update-password/<%= user._id %>" class="footer-link">My account</a>
             </li>
 
             <li>
