--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -81,7 +81,7 @@
           </li>
           <li class="sidebar-list-item">
             <a href="/sponsorship" target="_blank">
-              <span class="material-icons-outlined">sponsor</span> Sponsorship
+              <span class="material-icons-outlined">fact_check</span> Sponsorship
             </a>
           </li>
           <li class="sidebar-list-item">
