--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -269,9 +269,9 @@
         <h2 class="h2 section-title">The Leading Real Estate Rental Marketplace.</h2>
 
         <p class="about-text">
-          Over 39,000 people work for us in more than 70 countries all over the This breadth of global coverage,
-          combined with
-          specialist services
+          Welcome to Homehub, Sierra Leone's leading real estate marketplace where house owners and 
+          tenants/buyers connect seamlessly. Our mission is to simplify the real estate experience by 
+          providing a comprehensive, user-friendly platform that caters to all your property needs.
         </p>
 
         <ul class="about-list">
@@ -350,7 +350,7 @@
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
+                  over 1 million+ homes for sale available on this application, we can match you with a house you will want
                   to call home.
                 </p>
 
@@ -375,7 +375,7 @@
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
+                  over 1 million+ homes for sale available on this application, we can match you with a house you will want
                   to call home.
                 </p>
 
@@ -400,7 +400,7 @@
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
+                  over 1 million+ homes for sale available on this application, we can match you with a house you will want
                   to call home.
                 </p>
 
@@ -423,147 +423,6 @@
         - #FEATURES
       -->
 
-      <section class="features">
-        <div class="container">
-
-          <p class="section-subtitle">Our Aminities</p>
-
-          <h2 class="h2 section-title">Building Aminities</h2>
-
-          <ul class="features-list">
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="car-sport-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">Parking Space</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="water-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">Swimming Pool</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="shield-checkmark-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">Private Security</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="fitness-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">Medical Center</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="library-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">Library Area</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="bed-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">King Size Beds</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="home-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">Smart Homes</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="features-card">
-
-                <div class="card-icon">
-                  <ion-icon name="football-outline"></ion-icon>
-                </div>
-
-                <h3 class="card-title">Kid’s Playland</h3>
-
-                <div class="card-btn">
-                  <ion-icon name="arrow-forward-outline"></ion-icon>
-                </div>
-
-              </a>
-            </li>
-
-          </ul>
-
-        </div>
-      </section>
   
   <!-- include blog -->
   <%- include('include/_blog-guest', { apartments: apartments }) %>
