--- a/views/include/_about.ejs
+++ b/views/include/_about.ejs
@@ -15,12 +15,12 @@
 
             <p class="section-subtitle">About Us</p>
 
-            <h2 class="h2 section-title">The Leading Real Estate Rental Marketplace.</h2>
+            <h2 class="h2 section-title">The Leading Real Estate Rental Marketplace in Sierra Leone.</h2>
 
             <p class="about-text">
-              Over 39,000 people work for us in more than 70 countries all over the This breadth of global coverage,
-              combined with
-              specialist services
+              Welcome to Homehub, Sierra Leone's leading real estate marketplace where house owners and 
+              tenants/buyers connect seamlessly. Our mission is to simplify the real estate experience by 
+              providing a comprehensive, user-friendly platform that caters to all your property needs.
             </p>
 
             <ul class="about-list">
