--- a/views/success/user-apartment.ejs
+++ b/views/success/user-apartment.ejs
@@ -55,7 +55,10 @@
     <div class="container">
         <div class="success-message">
             <h1>Apartment Created Successfully!</h1>
-            <p>Your apartment details have been successfully created.</p>
+            <p>Your apartment details have been successfully created. </p>
+                <pre>You will receive a call from on of our staff to verified your post.
+                    <a href="javascript:void(0)" onclick="openWhatsApp()">Whatsapp us</a> for more information.</p>
+                </pre>
         </div>
         <div class="add-another-reception">
             <a href="home">Go Back</a>
@@ -68,4 +71,12 @@
         window.history.back();
     }
 </script>
+<script>
+    function openWhatsApp() {
+      const phoneNumber = '+23279969094'; 
+      const url = `https://wa.me/${phoneNumber}`;
+
+      window.open(url, '_blank');
+    }
+  </script>
 </html>
