--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -130,7 +130,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Registration Process Statement</a>
+              <a href="/registration-process-statement" class="footer-link">Registration Process Statement</a>
             </li>
 
             <li>
@@ -138,7 +138,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Privacy Policy</a>
+              <a href="/privacy-policy" class="footer-link">Privacy Policy</a>
             </li>
 
           </ul>
