--- a/views/include/_footer-guest.ejs
+++ b/views/include/_footer-guest.ejs
@@ -128,7 +128,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Registration Process Statement</a>
+              <a href="/registration-process-statement" class="footer-link">Registration Process Statement</a>
             </li>
 
             <li>
@@ -136,7 +136,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Privacy Policy</a>
+              <a href="/privacy-policy" class="footer-link">Privacy Policy</a>
             </li>
 
           </ul>
