--- a/views/success/user-apartment.ejs
+++ b/views/success/user-apartment.ejs
@@ -56,9 +56,9 @@
         <div class="success-message">
             <h1>Apartment Created Successfully!</h1>
             <p>Your apartment details have been successfully created. </p>
-                <!- <pre>You will receive a call from on of our staff to verified your post.
+                <!-- <pre>You will receive a call from on of our staff to verified your post.
                     <a href="javascript:void(0)" onclick="openWhatsApp()">Whatsapp us</a> for more information.</p>
-                </pre> ->
+                </pre> -->
         </div>
         <div class="add-another-reception">
             <a href="home">Go Back</a>
