--- a/views/success/user-apartment.ejs
+++ b/views/success/user-apartment.ejs
@@ -55,10 +55,10 @@
     <div class="container">
         <div class="success-message">
             <h1>Apartment Created Successfully!</h1>
-            <p>Your apartment details have been successfully created. </p>
-                <!-- <pre>You will receive a call from on of our staff to verified your post.
-                    <a href="javascript:void(0)" onclick="openWhatsApp()">Whatsapp us</a> for more information.</p>
-                </pre> -->
+            <p>Your apartment details have been successfully created. <br>
+            You will receive a call from on of our staff to verified your post.<br>
+            <p><a href="javascript:void(0)" onclick="openWhatsApp()">Whatsapp us</a> for more information.</p>
+                </p>
         </div>
         <div class="add-another-reception">
             <a href="home">Go Back</a>
