--- a/views/success/admin-apartment.ejs
+++ b/views/success/admin-apartment.ejs
@@ -53,12 +53,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="success-message">
+         <div class="success-message">
             <h1>Apartment Created Successfully!</h1>
-            <p>Your apartment details have been successfully created.</p>
-            <pre>You will receive a call from on of our staff to verified your post.
-                <a href="javascript:void(0)" onclick="openWhatsApp()">Whatsapp us</a> for more information.</p>
-            </pre>
+            <p>Your apartment details have been successfully created. <br>
+            You will receive a call from on of our staff to verified your post.<br>
+            <p><a href="javascript:void(0)" onclick="openWhatsApp()">Whatsapp us</a> for more information.</p>
+                </p>
         </div>
         <div class="add-another-reception">
             <a href="admin-home">Go Back</a>
