update and fixed apt img

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -32,6 +32,6 @@
 <body>
     <div class="icon">🏠</div>
     <h1>Oops! This page doesn't exist.</h1>
-    <p>Maybe it's hiding in the attic. <a href="/">Go back home</a>.</p>
+    <p>Maybe it's hiding in the attic. <a href="/login">Go back home</a>.</p>
 </body>
 </html>
