--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -151,7 +151,7 @@
               </li>
 
               <li>
-                <a href="/all-properties" class="navbar-link" data-nav-link>Apartments</a>
+                <a href="/login" class="navbar-link" data-nav-link>Apartments</a>
               </li>
 
               <li>
