--- a/views/include/_post-apartment-admin.ejs
+++ b/views/include/_post-apartment-admin.ejs
@@ -36,7 +36,7 @@
             <option value="Apartment">Apartment</option>
             <option value="Land">Land</option>
             <option value="Shop">Shop</option>
-            <option value="Shop">Other</option>
+            <option value="Other">Other</option>
         </select>
         </div>
 
@@ -212,7 +212,7 @@
         />
       </div>
 
-      <button class="formbold-btn">Create Post</button>
+      <button type="submit" class="formbold-btn">Create Post</button>
     </form>
   </div>
 </div>
