--- a/views/sponsorship-form.ejs
+++ b/views/sponsorship-form.ejs
@@ -1,3 +1,11 @@
-<!-- include sponsorship-form -->
+  <!-- include style -->
+  <%- include('include/_style') %>
+  <!-- /include style -->
+ 
+ <!-- include form-style -->
+  <%- include('include/_form-style') %>
+  <!-- /include form-style -->
+
+<!-- include SPONSORSHIP FORM -->
 <%- include('include/_sponsorship-form') %>
-<!-- /include sponsorship-form -->
+<!-- /include SPONSORSHIP FORM -->
