--- a/views/acc-dashboard.ejs
+++ b/views/acc-dashboard.ejs
@@ -11,6 +11,8 @@
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/admin.css">
     <style>
