--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homehub - Find your dream house</title>
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 <style>
   .header-bottom-actions {
     display: flex;
