--- a/views/include/_add-staffs-form.ejs
+++ b/views/include/_add-staffs-form.ejs
@@ -8,6 +8,7 @@
     - custom css link
   -->
   <link rel="stylesheet" href="./css/form.css">
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 <body>
 
