--- a/views/include/_transaction-list.ejs
+++ b/views/include/_transaction-list.ejs
@@ -6,6 +6,7 @@
     <title>All Transactions</title>
   <link rel="stylesheet" href="./css/users.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 <style>
     .storage-info {
