--- a/views/include/_all-properties.ejs
+++ b/views/include/_all-properties.ejs
@@ -112,6 +112,9 @@
             </button>
           </div>
         </figure>
+
+        
+<a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
         <div class="card-content">
           <!-- Dynamic price -->
           <div class="card-price">
@@ -119,7 +122,7 @@
           </div> 
           <!-- Dynamic title -->
           <h3 class="h3 card-title">
-            <a href="/apartment/<%= apt._id %>"><%= apt.title %></a> <!-- Link to detail page -->
+            <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>"><%= apt.title %></a> <!-- Link to detail page -->
           </h3>
           <!-- Dynamic description -->
           <p class="card-text">
@@ -131,13 +134,14 @@
               <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
               <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
                 <span>Contact site: Administrator</span>
+                <span>Apply</span>
               </a>
               <!-- <a href="/apartment-detail/">
                 <span>Details</span>
               </a> -->
             </li>
           </ul>
-        </div>
+        </div> </a>
         <div class="card-footer">
           <div class="card-author">
             <div>
@@ -161,7 +165,7 @@
               <ion-icon name="add-circle-outline"></ion-icon>
             </button>
           </div>
-        </div>
+        </div> 
       </div>
     </li>
   <% }); %>
