--- a/views/include/_blog-admin.ejs
+++ b/views/include/_blog-admin.ejs
@@ -117,6 +117,8 @@
               </button>
             </div>
           </figure>
+
+          <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
           <div class="card-content">
             <!-- Dynamic price -->
             <div class="card-price">
@@ -124,7 +126,7 @@
             </div> 
             <!-- Dynamic title -->
             <h3 class="h3 card-title">
-              <a href="#"><%= apt.title %></a>
+              <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>"><%= apt.title %></a> <!-- Link to detail page -->
             </h3>
             <!-- Dynamic description -->
             <p class="card-text">
@@ -139,7 +141,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </div> </a>
           <div class="card-footer">
             <div class="card-author">
               <div>
