--- a/views/success/application.ejs
+++ b/views/success/application.ejs
@@ -79,7 +79,7 @@ a:hover::after {
         <div class="success-message">
             <h1>Application submitted successfully!</h1>
             <p>Your application form has been submitted successfully. 
-                Please wait, one of our staff will contacts you shortly! 
+                Please wait, one of our staff will contact you shortly! 
                 <a href="javascript:void(0)" onclick="openWhatsApp()">Whatsapp us</a> for more information.</p>
         </div>        
         <div class="add-another-reception">
