--- a/views/include/_all-admin-properties.ejs
+++ b/views/include/_all-admin-properties.ejs
@@ -80,6 +80,7 @@
 <ul class="property-list has-scrollbar">
   <% apartments.forEach(apt => { %>
     <li class="property-item">
+      <a href="/admin-application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
       <div class="property-card">
         <figure class="card-banner">
           <% if (apt.photoUrl) { %>
@@ -113,7 +114,7 @@
           </div>
         </figure>
 
-        <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+        <a href="/admin-application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
 
         <div class="card-content">
           <!-- Dynamic price -->
@@ -122,7 +123,7 @@
           </div> 
           <!-- Dynamic title -->
           <h3 class="h3 card-title">
-            <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>"><%= apt.title %></a> <!-- Link to detail page -->
+            <a href="/admin-application-form?aid=<%= apt.aid %>&location=<%= apt.location %>"><%= apt.title %></a> <!-- Link to detail page -->
           </h3>
           <!-- Dynamic description -->
           <p class="card-text">
@@ -132,7 +133,7 @@
             <!-- Placeholder for square footage -->
             <li class="card-item">
               <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
-              <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+              <a href="/admin-application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
                 <span>Contact site: Administrator</span>
                 <span>Apply</span>
               </a>
@@ -167,6 +168,7 @@
           </div>
         </div> 
       </div>
+    </a>
     </li>
   <% }); %>
 </ul>
