--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -57,7 +57,7 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="/administrator" target="_blank">
               <span class="material-icons-outlined">dashboard</span> Dashboard
             </a>
           </li>
