--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -167,7 +167,7 @@
             <span>Search</span>
           </button>
 
-          <a href="/admin-profile/<%= user._id %>" class="header-bottom-actions-btn" aria-label="Profile">
+          <a href="/view/<%= user._id %>" class="header-bottom-actions-btn" aria-label="Profile">
             <ion-icon name="person-outline"></ion-icon>
             <span>Profile</span>
         </a>
