--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -189,7 +189,7 @@
             <span>Profile</span>
           </button> -->
 
-          <a href="/profile/<%= user._id %>" class="header-bottom-actions-btn" aria-label="Profile">
+          <a href="/view/<%= user._id %>" class="header-bottom-actions-btn" aria-label="Profile">
             <ion-icon name="person-outline"></ion-icon>
             <span>Profile</span>
           </a>
