--- a/views/profile-admin.ejs
+++ b/views/profile-admin.ejs
@@ -21,15 +21,14 @@
       <div class="cols__container">
         <div class="left__col">
 
-<div class="img__container">
-    <% if (users.photo) { %>
-        <img src="<%= relativePath %>" alt="profile" />
-    <% } else { %>
-        <!-- Default image placeholder if photo doesn't exist -->
-        <img src="/path/to/default/image.jpg" alt="profile" />
-    <% } %>
-    <span></span>
-</div>
+        <div class="img__container">
+          <% if (users.photoUrl) { %>
+            <img src="<%= users.photoUrl %>" alt="Apartment Photo">
+          <% } else { %>
+            <p>No photo available</p>
+          <% } %>
+            
+        </div>
 
         <h2><%= users.fullname %></h2>
         <p><%= '@' + users.username %></p>
