--- a/views/view.ejs
+++ b/views/view.ejs
@@ -62,8 +62,8 @@
             <ul>
               <li><a href="">posts</a></li>
               <li><a href="">galleries</a></li>
-              <li><a href="/admin-home">home</a></li>
-              <li><a href="/create-apartment">create post</a></li>
+              <li><a href="#">home</a></li>
+              <!-- <li><a href="/create-apartment">create post</a></li> -->
             </ul>
             <button>Follow</button>
           </nav>
